# shorturl-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
js/: main.js
shorturl/: Cargo.toml
shorturl/src/: config.rs  db_store.rs  types.rs
shorturl/www/static/: index.html
src/: config.rs  db_store.rs  main.rs  store.rs  types.rs  url_mapping.rs
www/static/: index.html
www/static/js/: main.js
